--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,11 +20,11 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Build Docker Image
       run: |
-        docker build -t DOCKER_USERNAME/devops-flask-app:$BUILD_ID ./app
+        docker build -t secrets.DOCKER_USERNAME/devops-flask-app:$BUILD_ID ./app
 
     - name: Push Docker Image
       run: |
-        docker push DOCKER_USERNAME/devops-flask-app:$BUILD_ID
+        docker push secrets.DOCKER_USERNAME/devops-flask-app:$BUILD_ID
 
     - name: Deploy to Kubernetes
       run: |
