--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,11 +20,11 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Build Docker Image
       run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/devops-flask-app:$BUILD_ID ./app
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/devops-flask-app:${GITHUB_SHA} ./app
 
     - name: Push Docker Image
       run: |
-        docker push ${{ secrets.DOCKER_USERNAME }}/devops-flask-app:$BUILD_ID
+        docker push ${{ secrets.DOCKER_USERNAME }}/devops-flask-app:${GITHUB_SHA}
 
     - name: Deploy to Kubernetes
       run: |
