--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,16 +15,18 @@ jobs:
     steps:
     - name: Login to DockerHub
       uses: actions/checkout@v4
+    - name: Log in to DockerHub
+      uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Build Docker Image
       run: |
-        docker build -t rajesh5631/devops-flask-app:latest ./app
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/devops-flask-app:latest ./app
 
     - name: Push Docker Image
       run: |
-        docker push rajesh5631/devops-flask-app:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/devops-flask-app:latest
 
     - name: Deploy to Kubernetes
       run: |
