--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,22 +32,26 @@ jobs:
      runs-on: ubuntu-latest
     # Set up AWS CLI
      steps:
-     - name: Set up AWS CLI
-       uses: aws-actions/configure-aws-credentials@v1
-       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
-
-    # Configure kubectl to use the EKS cluster
-     - name: Set up kubectl
+     - name: Create EKS Cluster
        run: |
-        aws eks --region ${{ secrets.AWS_REGION }} update-kubeconfig --name ${{ secrets.EKS_CLUSTER_NAME }}
+          aws eks create-cluster \
+            --name ${{ secrets.EKS_CLUSTER_NAME }} \
+            --role-arn ${{ secrets.EKS_ROLE_ARN }} \
+            --resources-vpc-config subnetIds=${{ secrets.SUBNET_IDS }},securityGroupIds=${{ secrets.SG_IDS }} \
+            --region ${{ secrets.AWS_REGION }}
 
-    # Apply Kubernetes manifests
-     - name: Deploy to Kubernetes
+      # Step 5: Wait for the EKS Cluster to be created
+     - name: Wait for EKS Cluster to be active
        run: |
-        kubectl apply -f k8s/deployment.yaml
+         aws eks --region ${{ secrets.AWS_REGION }} wait cluster-active --name ${{ secrets.EKS_CLUSTER_NAME }}
 
-  
+      # Step 6: Update kubeconfig for kubectl
+     - name: Set up kubectl for EKS
+       run: |
+          aws eks --region ${{ secrets.AWS_REGION }} update-kubeconfig --name ${{ secrets.EKS_CLUSTER_NAME }}
 
+      # Step 7: Deploy the application to the EKS cluster
+     - name: Deploy to EKS
+       run: |
+          kubectl apply -f k8s/deployment.yaml
+          
