--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
 
        - name: Update kubeconfig for EKS
          run: |
-          aws eks update-kubeconfig --region ${{ secrets.AWS.REGION }} --name ${{ secrets.EKS_CLUSTER_NAME }}
+          aws eks update-kubeconfig --region ${{ secrets.AWS_REGION }} --name ${{ secrets.EKS_CLUSTER_NAME }}
 
     # --------- Deploy to Kubernetes ---------
        - name: Deploy Kubernetes manifests
