--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,22 @@ on:
     branches: [ "main" ]
 
 jobs:
-
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.13
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
+      - name: Run linting
+        run: |
+          pylint app.py
   build:
-
+    needs: lint
     runs-on: ubuntu-latest
 
     steps:
