--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.14
+          python-version: 3.14.0-alpha.7
       - name: Run linting
         run: |
           pylint app.py
