--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pylint
-          pip install -r requirements.txt
+          pip install -r ./app/requirements.txt
       - name: Run linting
         run: |
           pylint ./app/app.py
