--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,3 +73,12 @@ jobs:
          run: |
           kubectl apply -f k8s/deployment.yaml
           kubectl apply -f k8s/service.yaml
+
+       - name: Install Prometheus & Grafana on Kubernetes
+         run: |
+          helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
+          helm repo update
+          helm install prometheus prometheus-community/prometheus --namespace monitoring --create-namespace
+          helm repo add grafana https://grafana.github.io/helm-charts
+          helm repo update
+          helm install grafana grafana/grafana --namespace monitoring
