--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,17 +68,47 @@ jobs:
          run: |
           aws eks update-kubeconfig --region ${{ secrets.AWS_REGION }} --name ${{ secrets.EKS_CLUSTER_NAME }}
 
-    # --------- Deploy to Kubernetes ---------
+ 
+
+    # Install Helm
+       - name: Install Helm
+         run: |
+          curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
+
+      # Add Helm repositories for Prometheus and Grafana
+       - name: Add Prometheus and Grafana Helm Repositories
+         run: |
+          helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
+          helm repo update
+          helm repo add grafana https://grafana.github.io/helm-charts
+          helm repo update
+
+      # Check if Prometheus is already installed, and uninstall if it exists
+       - name: Uninstall Prometheus if it exists
+         run: |
+          if helm status prometheus --namespace monitoring; then
+            helm uninstall prometheus --namespace monitoring
+          fi
+
+      # Install Prometheus
+       - name: Install Prometheus
+         run: |
+          helm install prometheus prometheus-community/prometheus --namespace monitoring --create-namespace
+
+      # Check if Grafana is already installed, and uninstall if it exists
+       - name: Uninstall Grafana if it exists
+         run: |
+          if helm status grafana --namespace monitoring; then
+            helm uninstall grafana --namespace monitoring
+          fi
+
+      # Install Grafana
+       - name: Install Grafana
+         run: |
+          helm install grafana grafana/grafana --namespace monitoring
+
+          # --------- Deploy to Kubernetes ---------
        - name: Deploy Kubernetes manifests
          run: |
           kubectl apply -f k8s/deployment.yaml
           kubectl apply -f k8s/service.yaml
-
-       - name: Install Prometheus & Grafana on Kubernetes
-         run: |
-          helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
-          helm repo update
-          helm install prometheus prometheus-community/prometheus --namespace monitoring --create-namespace
-          helm repo add grafana https://grafana.github.io/helm-charts
-          helm repo update
-          helm install grafana grafana/grafana --namespace monitoring
